# ethereum-trading-mcp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Makefile  README.md  mcp.dev.json  mcp.json  rust-toolchain.toml  rustfmt.toml  taplo.toml  typos.toml
.github/workflows/: ci.yml
docs/: api_reference.md  requirements_specification.md  system_design.md
docs/integration/: cherry_studio.md
src/: lib.rs  main.rs
src/config/: mod.rs
src/error/: mod.rs
src/ethereum/: client.rs  constants.rs  mod.rs  wallet.rs
src/ethereum/contracts/: chainlink.rs  erc20.rs  mod.rs  uniswap_v2.rs  uniswap_v3.rs
src/mcp/: mod.rs  server.rs
src/services/: balance.rs  mod.rs  price.rs  swap.rs  token_registry.rs
src/types/: mod.rs  swap.rs  token.rs
tests/: test_get_balance.rs  test_get_token_price.rs  test_server.rs  test_swap_tokens.rs
tests/common/: mod.rs
